--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto = update
 #logging.level.org.hibernate.type.descriptor = TRACE
 #spring.jpa.properties.hibernate.format_sql = TRUE
 
-security.user.name = 123
-security.user.password = 123
-logging.level.org.springframework.security: INFO
-logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
+#security.user.name = 123
+#security.user.password = 123
+#logging.level.org.springframework.security: INFO
+#logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
